--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 body {
-background: rgb(44, 10, 111);
 font: normal 20pt Arial;
 }
 
@@ -12,14 +11,18 @@ section {
     background: white;
     color: black;
     border-radius: 10px;
-    padding: 15px;
-    width: 400px;
+    padding: 18px;
+    width: 350px;
     margin: auto;
-    box-shadow: 5px 5px 10px rgb(0, 247, 255);
+    box-shadow: 5px 5px 10px rgb(0, 0, 0);
+}
+
+div {
+    text-align: center;
+    padding: 5px;
 }
 
 footer {
-    margin-top: 60%;
     text-align: center;
     color: rgb(255, 255, 255);
     font-size: 20px;
